--- a/src/main/resources/static/css/multipleItemsCarousel.css
+++ b/src/main/resources/static/css/multipleItemsCarousel.css
@@ -1,14 +1,4 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Apr 5, 2021, 8:50:47 PM
-    Author     : Σταθης Καράμπελας
-*/
-
-media only screen .multi-item-carousel .carousel-inner > .item {
+.multi-item-carousel .carousel-inner > .item {
   transition: 500ms ease-in-out left;
 }
 .multi-item-carousel .carousel-inner .active.left {
@@ -33,17 +23,12 @@ media only screen .multi-item-carousel .carousel-inner > .item {
     transform: none !important;
   }
 }
-.multi-item-carousel .carousel-control.left,
-.multi-item-carousel .carousel-control.right {
+.multi-item-carousel .carouse-control.left,
+.multi-item-carousel .carouse-control.right {
   background-image: none;
 }
-
-.multi-item-carousel .carousel-control.right{
-    width:100px;
-    
-}
 body {
-  background: #333;
+  
   color: #ddd;
 }
 h1 {
@@ -54,11 +39,10 @@ h1 {
   margin-bottom: 2em;
   text-shadow: 0px 2px 0px #000000;
 }
-.img-responsive{
+
+#theCarousel{
+    width:900px;
     height:200px;
-    width:200px;
-    margin-left:85px;
+    
 }
-
-
 
