--- a/src/main/resources/static/css/styles2.css
+++ b/src/main/resources/static/css/styles2.css
@@ -195,9 +195,11 @@ html,body{
 #monthauthorImage {
   margin-top: 5%;
   margin-bottom: 5%;
-  margin-left: 15%;
+  margin-left: 5%;
   justify-content: center;
   align-items: center;
+  width:200px;
+  height:240px;
 }
 
 #authorMonthColText {
@@ -240,8 +242,13 @@ html,body{
 
 /* upcoming books */
 #upcomingBooks {
-  height: 200px;
+  width:700px;
   margin: 0 15%;
   
+}
+
+.img-responsive{
+    height: 150px;
+    width:100px;
 }
 
