--- a/src/main/webapp/WEB-INF/views/header.jspf
+++ b/src/main/webapp/WEB-INF/views/header.jspf
@@ -337,11 +337,7 @@ header{
                   
               </c:forEach>
               
-<<<<<<< HEAD
-             <div id="cart-amount"><%=cartAmount%>​​​​​​​</div>
-=======
-             <div id="cart-amount"><%=cartAmount%></div>
->>>>>>> 51b90d1000b37677b8b7f0734db8110c413e7334
+             <div id="cart-amount"><%=cartAmount%>0​​​​​​​</div>
              <div class="clickable">
             <a id="cart-img" href="${pageContext.request.contextPath}/cart/index"></a>
             <p>Cart</p>
@@ -354,4 +350,12 @@ header{
 </header>
 
 
+<script>
+    let loginModal = document.getElementById("login-modal");
+    function toggleModal()
+    {
+        if (loginModal.style.display !== "inline-block") loginModal.style.display = "inline-block";
+        else loginModal.style.display = "none";
+    } 
+</script>    
 
