Added chat functionality and FAQS and Contact pages

--- a/src/main/webapp/WEB-INF/views/footer.jspf
+++ b/src/main/webapp/WEB-INF/views/footer.jspf
@@ -78,8 +78,8 @@
         <ul>
             <li><a href="/bookstore/login">Sign in / Register</a></li>
             <li><a href="#">My Account</a></li>
-            <li><a href="#">Contact us</a></li>
-            <li><a href="#">FAQs</a></li>
+            <li><a href="${pageContext.request.contextPath}/contact">Contact us</a></li>
+            <li><a href="${pageContext.request.contextPath}/faqs">FAQs</a></li>
             <li><a href="#">Log out</a></li>
         </ul>
     </div>
