Corrected false constraints at visitor entity and some errors when visitor buys only ebooks

--- a/src/main/webapp/WEB-INF/views/footer.jspf
+++ b/src/main/webapp/WEB-INF/views/footer.jspf
@@ -70,7 +70,9 @@
 <div id="footer">
     
     <div style="text-align: center; padding-bottom: 20px; margin: 0;" id="whoweare" class="footerBlock">
-        <p   >Who we are</p>
+        <p>Who we are</p>
+        <p> At BookaPorta, we love high street shopping. From browsing to buying, finding new shops to meeting passionate staff. If we could live in a bookshop, we’d probably do it. Therefore, we decided to open a bookshop ourselves.
+            We're working hard to keep that fun and sociable shopping experience alive for 15 years. </p>
     </div>
     
     <div id="helpfulLinks" class="footerBlock">
